examples/borrows/neg/borrow_conflict.lr
fn borrow_conflict(;) ret k(r: (); own(r)) =
  let x = alloc(1);
  let p1 = alloc(1);
  let p2 = alloc(1);
  x := 1;
  p1 := &mut x;
  p2 := &mut x;

  let r = alloc(());
  jump k(r)